# Makefile.am
#
# This file is part of fizmo-json.  Please see LICENSE.md for the license.

# AUTOMAKE_OPTIONS = -Wno-override

#localedir = $(datarootdir)/fizmo/locales

# if FIZMO_BUILD_PREFIX_EMPTY
#   fizmo_build_prefix=$(DESTDIR)$(prefix)
# endif

# PKG_DIR = $(fizmo_build_prefix)/lib/pkgconfig
# PKGFILE = $(PKG_DIR)/libfizmo.pc

SUBDIRS = src/fizmo-json
# man6_MANS = src/man/fizmo-json.1
